--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5066,7 +5066,7 @@ no_take_until_ROM.tt:0 "The §CKing§! will make a variety of suggestions for ou
 ww1_romania.9.a:0 "Lets see how they do!"
 ROM_ferd_king:0 "Ferdinand I is King of Romania"
 ww1_romania.8.t:0 "The Carol Mosque"
-ww1_romania.8.d:0 "While the Muslim population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian Muslims, as well as a act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanta, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
+ww1_romania.8.d:0 "While the Muslim population in Romania is small, they do have prominence. As a sign of respect and solidarity with Romanian Muslims, as well as an act of good will to the Ottoman Empire, King Carol today ordered construction to begin on a grand mosque in Constanta, one of our largest cities. While construction will be slow, the ambitious project will certainly increase tourism to our country once completed."
 ww1_romania.8.a:0 "We're an inclusive country!"
 ww1_romania.1.t:0 "The Puppet Master"
  ww1_romania.28.t:0 "The Outbreak of the Great War"
@@ -5083,15 +5083,15 @@ ROM_national_opposition_idea:0 "National Opposition"
 ROM_the_carp_constitution:0 "The Carp Constitution"
 ROM_the_carp_constitution_desc:0 "With all enemies of Carp neutralized, we can finally take drastic actions to reorganize the Romanian state. The events of the past year have made it clear Romania must move away from decadent parliamentarism and move towards an all powerful strong ruler, and our new constitution will do just this."
 ROM_all_factions_crushed:0 "There are no politically relevant forces in Romania to oppose this drastic action"
-ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as one of the most modern constitutions in the world at the time, with seperation of powers, an abolished death penalty, guaranteed private property, freedom of speech, and total freedom of the press. However, the Romanian constitution has had very little change since then, and thus Romania has fallen from one of the most democratic countries at its time, to the flawed constitutional monarchy it is now.\n\nWhether this is a positive or negative development for Romania is debatable, but one thing can be agreed upon by everyone: King Carol's influence on the Romanian political system is immense, and has grown in recent times. King Carol has often simply rotated between forming a government with the liberal PNL, and the conservative PC, as well as the recently formed moderate PCD. This has lead to little actual reform in Romania, as opposing political parties overturn much of the reforms the last government passed. This culminated in a revolt by angry peasants in 1907, angered by the little reform passed by any government. Thus, King Carol has taken a new course, appointing a liberal government that has governed the country for the last 3 years straight, passing a suprisingly large amount of reforms as of recent, which has kept the peasants in line for now.\n\nWith the 1911 elections approaching, King Carols confidence in the liberals and their ability to govern has declined. Seeing it as time for a new party to get a chance to rule Romania, King Carol has been flirting with the idea of appoiting a conservative government, or at least supporting the conservatives in the elections."
-ww1_romania.1.a:0 "The king is a very wise man"
+ww1_romania.1.d:0 "The Romanian constitution of 1866 has often been praised as one of the most modern constitutions in the world at the time, with separation of powers, an abolished death penalty, guaranteed private property, freedom of speech, and total freedom of the press. However, the Romanian constitution has changed very little since then, and thus Romania has fallen from one of the most democratic countries at its time, to the flawed constitutional monarchy it is now.\n\nWhether this is a positive or negative development for Romania is debatable, but one thing can be agreed upon by everyone: King Carol's influence on the Romanian political system is immense, and has grown in recent times. King Carol has often simply rotated between forming a government with the liberal PNL, and the conservative PC, as well as the recently formed moderate PCD. This has lead to little actual reform in Romania, as opposing political parties overturn much of the reforms the last government passed. This culminated in a revolt by angry peasants in 1907, angered by the little reform passed by any government. Thus, King Carol has taken a new course, appointing a liberal government that has governed the country for the last 3 years straight, passing a suprisingly large amount of reforms as of recent, which has kept the peasants in line for now.\n\nWith the 1911 elections approaching, King Carols confidence in the liberals and their ability to govern has declined. Seeing it as time for a new party to get a chance to rule Romania, King Carol has been flirting with the idea of appoiting a conservative government, or at least supporting the conservatives in the elections."
+ww1_romania.1.a:0 "The King is a very wise man"
 ww1_romania.88.t:0 "Petre Carp Forms Government in Romania"
 ww1_romania.88.d:0 "With the results of Romanias recent elections in, Petre Carp's conservative party has captured a majority in parliament. Thus, King Carol has given them the task of forming a government. Notably, Petre Carp has long been a Germophile and has written several works calling for the 'liberation' of Moldova from the Russian Empire. With this, many are expecting Romania to draw closer to Germany. Even more concerningly for the entente, Carp has shown authoritarian tendencies in the past and in his current rhetoric, and thus it's unknown if Carp would be willing to give up power."
 ww1_romania.88.a:0 "Is he a threat to Romanian democracy?"
 ww1_romania.88.b:0 "Lets hope his government falls!"
 ww1_romania.88.c:0 "We wish him well!"
 ww1_romania.89.t:0 "PNL Government in Romania"
-ww1_romania.89.d:0 "Today the King tasked the liberal PNL party of Romania to form a new government. Notably, many in the PNL are outspoken francophiles, and thus many expect this new government may draw closer to the Entente. This would prove a big blow to the Central Powers, which has heavily influenced Romania in the past. Already, the new government has began outreach to France, and suprisingly, Russia, to strengthen ties. Although nothing is guaranteed, this seems to be a big blow to Germany."
+ww1_romania.89.d:0 "Today the King tasked the liberal PNL party of Romania to form a new government. Notably, many in the PNL are outspoken Francophiles, and thus many expect this new government may draw closer to the Entente. This would prove a big blow to the Central Powers, which has heavily influenced Romania in the past. Already, the new government has began outreach to France, and suprisingly, Russia, to strengthen ties. Although nothing is guaranteed, this seems to be a big blow to Germany."
 ww1_romania.89.a:0 "It would certainly shake things up"
 ww1_romania.89.b:0 "Great!"
 ww1_romania.89.c:0 "Nothing is guarenteed!"
@@ -5204,7 +5204,7 @@ ww1_romania.43.a:0 "There has to be a way!"
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
 ROM_re_assure_liberals:0  "Reassure Our Coalition Partners"
-ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
+ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the Kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
 ROM_restore_christianity_to_romania:0 "Restore Christianity to Romania"
 ROM_restore_christianity_to_romania_desc:0 ""
 ROM_blurry_the_lines_between_church_and_state:0 "Blur the Lines Between Church and State"
@@ -5242,7 +5242,7 @@ ROM_you_think_you_just_fell_out_of_a_coconut_tree_desc:0 ""
 ROM_research_investments:0 "Rural Research Investments"
 ROM_a_moral_romania.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nGain Base Stability: §G+1.50%§!.\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
 ww1_romania.58.t:0 "Prince Carol joins the Romanian Senate"
-ww1_romania.58.d:0 "As guaranteed by the Romanian constiution, Prince Carol, son of king Ferdinand, has became a member of Romanias parliament. While not joining any political party in particular, Carol has shown to allign with conservative and nationalist elements of Romanias politics, even being friendly with the radical PND."
+ww1_romania.58.d:0 "As guaranteed by the Romanian constiution, Prince Carol, son of King Ferdinand, has became a member of Romanias parliament. While not joining any political party in particular, Carol has shown to allign with conservative and nationalist elements of Romanias politics, even being friendly with the radical PND."
 ww1_romania.58.a:0 "Lets give him a warm welcome!"
 ROM_new_elites.tt:0 "Tthe §YNational Spirit§! this focus grants will be strengthened at §Y50.00%§!, §Y60.00%§!, and §Y70.00%§! §3Democratic§! support"
 ROM_a_moral_romania_desc:0 "The past few corrupt administrations - both containing the PNL and the PC, have greatly lowered the faith of the people in Romanias government. We must strive to restore the Romanian peoples confidence in our government."
@@ -5361,7 +5361,7 @@ ROM_no_take_halve:0 "Has promised King that we won't pursue this policy"
 no_happy_few:0 "Has promised King that we won't pursue this policy"
 disable_we_happy_few:0 "§RDisables§! National Focus: '§YWe Happy Few§!'"
 ww1_romania.40.t:0 "Romania Requests Bukovina In Exchange for Joining the Central Powers"
-ww1_romania.40.d:0 "While already signed a defensive pact with us and [GER.GetName], [ROM.GetName] would have no obligations to us if an offensive war against the Entente was started by us. Although [ROM.GetName] joining us against [RUS.GetName] was seen as a forgone conclusion a few years ago, its clear [ROM.GetName] has started to drift away from our sphere of influence lately. Today, [ROM.GetName]'s ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While [GER.GetName] is pressuring us to accept [ROM.GetName]'s' request, it would certainly anger some hungarians."
+ww1_romania.40.d:0 "While we already signed a defensive pact with us and [GER.GetName], [ROM.GetName] would have no obligations to us if an offensive war against the Entente was started by us. Although [ROM.GetName] joining us against [RUS.GetName] was seen as a forgone conclusion a few years ago, its clear [ROM.GetName] has started to drift away from our sphere of influence lately. Today, [ROM.GetName]'s ambassador has requested we consider transfering the province of Bukovina to us, in return for offically joining the Central Powers. While [GER.GetName] is pressuring us to accept [ROM.GetName]'s' request, it would certainly anger some hungarians."
 ww1_romania.40.a:0 "This is unacceptable!"
 ww1_romania.40.b:0 "We don't have a use for Bukovina anyways"
 ww1_romania.75.t:0 "[AUH.GetName] agrees to cede Bukovina to us!"
@@ -5406,8 +5406,8 @@ ROM_the_house_always_wins:0 "The House Always Wins"
 ROM_the_house_always_wins_desc:0 "The King has decided that the charade of constantly shifting parties will end, as he is now backing the PCD entirely. With our mandate secured, now is the time to make moves that we couldn't do beforehand."
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
-ROM_social_conservative_principal:0 "Social Conservative Principal"
-ROM_social_conservative_principal_desc:0 ""
+ROM_social_conservative_principle:0 "Social Conservative Principle"
+ROM_social_conservative_principle_desc:0 ""
 ROM_take_ionescu:0 "Take Ionsecu"
 ROM_the_natural_party_of_governance:0 "The Natural Party of Governance"
 ROM_the_natural_party_of_governance_desc:0 "The PNL has ruled competently for the past 3 years. Entrusted by the king and the people, the PNL has carefully passed much needed reforms and brought stability to the country ever since the 1907 peasant revolt. Its clear the PNL is suitable to continue governing."
@@ -5428,7 +5428,7 @@ ww1_romania.84.t:0 "A Dissapointing Peace Treaty"
 ww1_romania.84.d:0 "The Prime Minister has officially resigned after failing to obtain Banat in negotiations. Despite recieving nearly all of Romania's claims, Bratianu, at the head of the delegation to Paris, decided that rather than accept compromise with the Kingdom of Serbs, Croats, and Slovenes he would give up entirely and let a new Prime Minister see what he can do. This stubborn attitude has been made clear to be unwanted by the rest of government during a time of national rejuvenation after union with Transylvania, Bukovina, and Bessarabia. Truly an unnecessary gesture when compromise could have made things so much easier."
 ww1_romania.84.a:0 "What a letdown."
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
-ROM_law_on_southern_dobruja_desc:0 "Witth our recent conquest of Southern Dobruja, another step towards the great project of Greater Romania has been achieved. However, we must decide how the region will be governed, as well as how the Bulgarian and Turkish populations will be treated."
+ROM_law_on_southern_dobruja_desc:0 "With our recent conquest of Southern Dobruja, another step towards the great project of Greater Romania has been achieved. However, we must decide how the region will be governed, as well as how the Bulgarian and Turkish populations will be treated."
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
 ROM_encourage_romanian_migration_dobruja_desc:0 "Dobruja is a diverse region, with a large population of not only Romanians but Bulgars, Turks, Greeks and even a small population of Germans. Encouraging settlement by Romanians to the region would tip demographics in our favour."
 ROM_concessions_to_muslim_romanians:0 "Concessions to Muslim Romanians"
@@ -5465,7 +5465,7 @@ ROM_adapt_to_the_times_desc:0 ""
 ROM_to_the_trenches_you_go:0 "To the Trenches you Go"
 ROM_to_the_trenches_you_go_desc:0 ""
 ROM_restructure_the_army:0 "Restructure the Army"
-ROM_restructure_the_army_desc:0 ""
+ROM_restructure_the_army_desc:0 "The Romanian Armed Forces is one of the largest militaries in the Balkans, but is ill-equipped, untrained and inexperienced. With the help of our allies, we can finally change this."
 ROM_political_unity:0 "Political Unity"
 ROM_political_unity_desc:0 ""
 ROM_for_the_truth:0 "For Romania! For the Truth!"
@@ -5521,7 +5521,7 @@ ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_military_cooperation_with_austria:0  "Military Cooperation with Austria-Hungary"
 ROM_military_cooperation_with_austria_desc:0 "Despite their oppression of Transylvanian Romanians it would prove fruitful to seek military cooperation with the Austrians. Their time may come, or it may not, but no matter the outcome of future relations it would be prudent to extract as much benefit as we can from our current relationship."
 ROM_krupp_weapon_purchases:0 "Krupp Weapon Purchases"
-ROM_krupp_weapon_purchases_desc:0 "Krupp has a reputation for providing countries an edge over their foes that no other weapons manufacturer can match. The strongest of examples would be Prussia utilizing their rifles in order to secure total victory over their opponents in the wars to unify Germany. Our current goals are not to dissimilar to what Prussia's were, so whose to say the same solution wouldn't work for us?"
+ROM_krupp_weapon_purchases_desc:0 "Krupp has a reputation for providing countries an edge over their foes that no other weapons manufacturer can match. The strongest of examples would be Prussia utilizing their rifles in order to secure total victory over their opponents in the wars to unify Germany. Our current goals are not tooo dissimilar to what Prussia's were, so whose to say the same solution wouldn't work for us?"
 ROM_crush_the_protesters:0 "Declare a State of Emergency"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
@@ -5547,6 +5547,7 @@ ROM_reconcile_pcd_desc:0 "Pretty much the entirety of the PCD's leadership is ma
 ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
+ROM_anti_russianism_desc:0 "The Russians stole Bessarabia, occupied us, crushed the Wallachian Revolution, and made use cede land gained after the Crimean War. Its clear Romania won't be safe until their influence is expelled, and our Bessarabian brothers liberated."
 ROM_recruitment_campaigns:0 "We Need You!"
 ROM_recruitment_campaigns_desc:0 "If Romania are to win the battles our country is almost assuredly going to face, we need more men. The time has come to call upon the patriotism in every young Romanian to serve their country."
 ROM_embrace_revanchism:0 "Embrace Revanchism"
@@ -5814,7 +5815,7 @@ ROM_aurel_vlaicu_survives:0 "Aurel Vlaicu survives flight across Carpathians"
 ROM_the_kings_government:0 "The King's Favorite"
 ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL. Perhaps the rotation system may finally stop due to his displeasure with the next party exceeding his displeasure with the current one. Nevermind that, though. All that is known now is that a moderate government has been entrusted to the PCD. Negotiations have begun for a coalition encompassing the centrist delegates."
 ROM_romanian_army_idea:0 "Romanian Army"
-ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as king of Romania"
+ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as King of Romania"
 ROM_attract_war_industry:0 "Modify §YRomanian Army§! by\n£factory_output_texticon Factory Output: §G+7.00%§!"
 ROM_full_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-10.00%§!\n£factory_output_texticon Factory Output: §G+10.00%§!\n "
 ROM_stable_mob.tt:0 "Modify §YHomefront§! by\n£stability_texticon Stability: §R-2.50%§!\n£factory_output_texticon Factory Output: §G+5.00%§!\n "
