bug fixes + focuses

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5803,6 +5803,15 @@ ww1_romania.97.a:0 "Incredible."
 ROM_1912_naval_program:0 "[GetYear] Naval Program"
 ROM_screening_focus:0 "Focus on Surface Wolves"
 ROM_submarine_focus:0 "Focus on Underwater Snipers"
+ROM_law_on_minorities:0 "Romanianization"
+ROM_integration_of_szekelyfold:0 "Integrate [778.GetName]"
+ROM_integration_of_east_alford:0 "Integrate [1020.GetName]"
+ROM_pillage_hungary:0 "Pillage the [HUN.GetAdjective] Border"
+ROM_form_the_little_entente:0 "Form the Little Entente"
+ROM_anti_hungarian_propaganda:0 "Anti-Hungarian Propaganda"
+ROM_retry_to_secure_banat:0 "Retry to Secure [764.GetName]"
+ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the [ROM.GetAdjective] Government since our failure of obtaining it at the Paris Peace Conference."
+
 #custom tooltips
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
