--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2882,6 +2882,7 @@ ROM_abandon_federalism_idea:0 "Abandon Federalism"
 ROM_1912_naval_program_idea:0 "[ROM.GetAdjective] Naval Program"
 ROM_1912_naval_program_idea_screen:0 "Surface Hunters"
 ROM_1912_naval_program_idea_sub:0 "Underwater Sinkers"
+ROM_anti_hungarian_propaganda_idea:0 "Anti-Hungarian Propaganda"
 
  #PERU
  PRU_aristocratic_republic:0 "Aristocratic Republic"
