--- a/localisation/english/ww1_bulgaria_I_english.yml
+++ b/localisation/english/ww1_bulgaria_I_english.yml
@@ -120,6 +120,24 @@ l_english:
  BUL_the_macedonian_question: "The Macedonian Question"
  BUL_the_macedonian_question_desc: "Address the complex Macedonian question and its implications for our region."
 
+ BUL_expanding_international_relations: "Expanding International Relations"
+ BUL_expanding_international_relations_desc: "fill later"
+
+ BUL_promote_the_tsar_kaiser_relationship: "Align With the Triple Alliance"
+ BUL_promote_the_tsar_kaiser_relationship_desc: "fill later"
+
+ BUL_our_slavic_godfather: "Our Traditional Allies"
+ BUL_our_slavic_godfather_desc: "fill later"
+
+ BUL_enjoy_belgian_brotherhood: "Enjoy The Belgian Brotherhood"
+ BUL_enjoy_belgian_brotherhood_desc: "fill later"
+
+ BUL_russia_relations: "Our Slavic Godfather"
+ BUL_russia_relations_desc: "Russia are not only our Slavic Godfather, quite literally for Boris III, they are our greatest supporter and our liberators, even though we could've done it ourselves..."
+
+ BUL_flirt_with_paris: "Flirt With Paris"
+ BUL_flirt_with_paris_desc: "fill later"
+
 #Decision Loc
 BUL_arms_purchases:0 "Arms Purchases"
 purchase_austrian_rifles:0 "Purchase Austrian Rifles"
