--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -498,7 +498,7 @@ ROM_integration_of_east_alford:0 "Integrate [1020.GetName]"
 ROM_pillage_hungary:0 "Pillage the [HUN.GetAdjective] Border"
 ROM_form_the_little_entente:0 "Form the Little Entente"
 ROM_anti_hungarian_propaganda:0 "Anti-Hungarian Propaganda"
-ROM_retry_to_secure_banat:0 "Retry to Secure [764.GetName]"
+ROM_retry_to_secure_banat:0 "Finders Keepers"
 ROM_retry_to_secure_banat_desc:0 "Securing [764.GetName] has been an objective by the [ROM.GetAdjective] Government since our failure of obtaining it at the Paris Peace Conference."
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 
