--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -11836,7 +11836,10 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_soviet.50.b:0 "Тяжелый удар по революции." 
  ww1_soviet.50.c:0 "Получите!" 
  ww1_soviet.50.d:0 "Террор становится нормой в России."
- lenin_is_dead:0 "Lenin is dead" 
+ lenin_is_dead:0 "Lenin is dead"
+ ww1_soviet.51.t: "Revolution Extinguishes In Ukraine"
+ ww1_soviet.51.d: "Our military campaign to liberate the Little Russians by igniting a flame of the revolution has failed: the Soviet local government has already lost all influence."
+ ww1_soviet.51.a: "So long my love." 
  
  #BELARUS 
  ww1_belorussia.1.t:0 "Советская Республика Белоруссия"
