--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -180,8 +180,18 @@
  TUR_minority_revolutionary_leader:0 "Minority Revolutionary"
  TUR_minority_revolutionary:0 "Minority Revolutionary"
  TUR_minority_reformer:0 "Minority Reformer"
- TUR_ottoman_recruitable_population_factor_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §G+5.00%§!\nModify State's Modification to §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
- TUR_ottoman_recruitable_population_factor_minus_05:0 "Modify [TUR_get_state_minority] by\n:£manpower_texticon  Recruitable Population: §R-5.00%§!\nModify State's Modification to §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §R-0.10%§!\n"
+ TUR_avraam_benaroya_tt:0 "£ww1_flag_ISR  §YJewish Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n\n"
+ TUR_avraam_benaroya_tt2:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_avraam_benaroya_tt3:0 "£ww1_flag_ISR  §YJewish Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §R-0.20%§!\n\n"
+ TUR_avraam_benaroya_tt4:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n\n"
+ TUR_mekertich_portukalian_tt:0 "£ww1_flag_ARM  §YArmenian Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n\n"
+ TUR_mekertich_portukalian_tt2:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_mekertich_portukalian_tt3:0 "£ww1_flag_ARM  §YArmenian Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §R-0.20%§!\n\n"
+ TUR_mekertich_portukalian_tt4:0 "Modify £ww1_flag_ARM  §YArmenian Minority§! by\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n\n"
+ TUR_dimo_hadzhidimov_tt:0 "£ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §G+0.20%§!\n£war_support_modifiericons_texticon  War Support: §G+0.20%§!\n\n"
+ TUR_dimo_hadzhidimov_tt2:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n\n"
+ TUR_dimo_hadzhidimov_tt3:0 "£ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §R-0.20%§!\n£war_support_modifiericons_texticon  War Support: §R-0.20%§!\n\n"
+ TUR_dimo_hadzhidimov_tt4:0 "Modify £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! by\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n\n"
  TUR_modern_islamist:0 "Modern Islamist"
  TUR_modern_islamist_leader:0 "Modern Islamist"
  TUR_reformist_nationalist:0 "Reformist Nationalist"
@@ -475,6 +485,7 @@
  SAU_telegraph_operator: "Telegraph Operator"
  pan_arabist_doctor: "Pan Arabist Medical Doctor"
  progressive_royal: "Progressive Royal"
+ TUR_vatan_ideologue:0 "Vatan Ideologue"
  famous_politician: "Internationally Famous Figure"
  Whabbist_demagogue: "Whabbist Demagogue"
  gun_dealer: "Gun Dealer"
