Japanese Intervention in Siberia

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -415,7 +415,8 @@
 
  JAP_democratic_party:0 "Kokumintō"
  JAP_democratic_party_long:0 "Rikken Kokumintō"
- JAP_taisho_democracy_party:0 "Taishō Democracy"
+ JAP_taisho_democracy_party:0 "Taishō Demokurashī"
+ JAP_taisho_democracy_party_long:0 "Taishō Demokurashī Undō"
  JAP_neutrality_party:0 "Kōshitsu"
  JAP_neutrality_party_long:0 "Nippon Kōshitsu"
  JAP_national_unity_government:0 "Kyokoku Icchi Naikaku"
