--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1022,10 +1022,8 @@
  VICTORY_POINTS_4973: "Hotan"
  VICTORY_POINTS_4823: "Altay"
  VICTORY_POINTS_4800: "Ulala"
- VICTORY_POINTS_7835: "Ulan Ude"
- VICTORY_POINTS_12644: "Barguzin"
+ VICTORY_POINTS_7835: "Verkhneudinsk"
  VICTORY_POINTS_13063: "Anadyr"
- VICTORY_POINTS_4705: "Chita"
  VICTORY_POINTS_4859: "Dudinka"
  VICTORY_POINTS_1684: "Salekhard"
  VICTORY_POINTS_1659: "Khanty-Mansysk"
