--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3492,8 +3492,8 @@
  RUS_Constantinople_Agreement_desc:0 "The centuries-old dream of controlling Constantinople, the gateway between East and West, looms large. Securing this jewel would not only fulfill a historic ambition but also reshape the balance of power in the region."
  is_russia_a_monarchy_tt:0 "Russia is a §YMonarchy§!."
  is_russia_a_monarchy_tt_NOT:0 "Russia is a §YRepublic§!."
- is_russian_tag_tt:0 "Is §YRussia§!."
- is_russian_tag_tt_NOT:0 "NOT: Is §YRussia§!."
+ is_russian_tag_tt:0 "Is §YRussian Country§!."
+ is_russian_tag_tt_NOT:0 "Not: Is §YRussian Country§!."
  is_cossack_tag_tt:0 "Is §YCossack State§!."
  is_cossack_tag_tt_NOT:0 "NOT: is §YCossack State§!."
  is_russian_breakaway_tag_tt:0 "Is Russian §YBreakaway State§!."
@@ -7969,9 +7969,6 @@
 
  JAP_ww1_Leave_Entente:0 "Leave Entente"
  JAP_ww1_Leave_Entente_desc:0 "The Entente has served its purpose to Japan, and it seems with recent events that it is no longer a group of friendly nations. It seems reasonable to assume, in fact, that Japan and the former Entente may one day be at odds with each other at war."
-
- JAP_ww1_war_sakhalin:0 "Yuki no Shingun"
- JAP_ww1_war_sakhalin_desc:0 "Marching in the snow, stepping on ice, We can't even tell road from river."
 
  JAP_ww1_expeditionary_force_france:0 "Expeditionary Force to France"
  JAP_ww1_expeditionary_force_france_desc:0 "Though the European war rages on far from Japanese shores, we would still be wise to assist our allies. By sending a small group to France, we can help make sure our friends actually win their part of the war."
