--- a/localisation/russian/victory_points_l_russian.yml
+++ b/localisation/russian/victory_points_l_russian.yml
@@ -1022,10 +1022,8 @@
  VICTORY_POINTS_4973: "Хотан"
  VICTORY_POINTS_4823: "Алтай"
  VICTORY_POINTS_4800: "Улала"
- VICTORY_POINTS_7835: "Улан-Удэ"
- VICTORY_POINTS_12644: "Баргузин"
+ VICTORY_POINTS_7835: "Верхнеудинск"
  VICTORY_POINTS_13063: "Анадырь"
- VICTORY_POINTS_4705: "Чита"
  VICTORY_POINTS_4859: "Дудинка"
  VICTORY_POINTS_1684: "Салехард"
  VICTORY_POINTS_1659: "Ханты-Мансийск"
