--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -8618,6 +8618,12 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  JAP_invade_kiautschou_mission_tt:0 "§Y1 дивизия§! состоящая из §Yпехотных частей§! будет развернута в §YШаньдуне§!."
  JAP_seize_shandong_anyway:0 "Захватить [872.GetName] у государства [FROM.GetName]"
  JAP_seize_shandong_anyway_desc:0 "Чтобы эффективно вести войну, нам нужно захватить полуостров Шаньдун, независимо от того, в наших руках Цзяо-Чжоу или нет - китайцы все равно не посмеют сопротивляться, - и мы можем добавить, что основанием для этого является захват вражеских активов в этой провинции."
+ JAP_cat_siberian_intervention:0 "Интервенция в Сибирь"
+ JAP_take_northern_sakhalin:0 "Взять Кита-Карафуто"
+ JAP_start_siberian_intervention:0 "Начать интервенцию в государство [FROM.GetName]"
+ JAP_send_manpower_to_siberia:0 "Отправить людские ресурсы в государство [FROM.GetName]"
+ JAP_send_rifles_to_siberia:0 "Отправить винтовки в государство [FROM.GetName]"
+ JAP_end_siberian_intervention:0 "Завершить интервенцию в государстве [FROM.GetName]"
 
  austrian_galicia:0 "Австрийская Галиция"
  bosnian_revolt:0 "Боснийское восстание"
