--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -3492,8 +3492,8 @@
  RUS_Constantinople_Agreement_desc:0 "Как защитники Православия, мы имеем обоснованные претензии на Константинополь, однако у некоторых могут возникнуть проблемы с нашими претензиями."
  is_russia_a_monarchy_tt: "Россия – §Yмонархия§!."
  is_russia_a_republic_tt: "Россия - §Yреспублика§!."
- is_russian_tag_tt:0 "Is §YRussia§!."
- is_russian_tag_tt_NOT:0 "NOT: Is §YRussia§!."
+ is_russian_tag_tt:0 "Is §YRussian Country§!."
+ is_russian_tag_tt_NOT:0 "Not: Is §YRussian Country§!."
  is_cossack_tag_tt:0 "Is §YCossack State§!."
  is_cossack_tag_tt_NOT:0 "NOT: is §YCossack State§!."
  is_russian_breakaway_tag_tt:0 "Is Russian §YBreakaway State§!."
@@ -7969,9 +7969,6 @@
   
  JAP_ww1_Leave_Entente: "Покинуть Антанту"
  JAP_ww1_Leave_Entente_desc:0 "Антанта выполнила свою задачу для Японии, и похоже, в связи с недавними событиями это больше не группа дружественных наций. На самом деле кажется разумным предположить, что Япония и бывшая Антанта однажды могут оказаться в состоянии войны друг с другом."
-  
- JAP_ww1_war_sakhalin: "Сахалин - это Карафуто"
- JAP_ww1_war_sakhalin_desc:0 "Сахалин - очень неподходящее название для японского владения. 'Карафуто' кажется гораздо более подходящим!"
   
  JAP_ww1_expeditionary_force_france: "Экспедиционные силы во Францию"
  JAP_ww1_expeditionary_force_france_desc:0 "Хотя европейская война бушует далеко от японских берегов, мы все равно поступим мудро, если поможем нашим союзникам. Отправив небольшую группу во Францию, мы можем помочь убедиться, что наши друзья действительно выиграют свою часть войны."
