--- a/localisation/russian/parties_l_russian.yml
+++ b/localisation/russian/parties_l_russian.yml
@@ -415,13 +415,14 @@
 
  JAP_democratic_party:0 "Кокуминто"
  JAP_democratic_party_long:0 "Риккен Кокуминто"
- JAP_taisho_democracy_party_long:0 "Демократия Тайшо"
+ JAP_taisho_democracy_party:0 "Демократия Тайсе"
+ JAP_taisho_democracy_party_long:0 "Демократия Тайсе Ундо"
  JAP_neutrality_party:0 "Кошицу"
  JAP_neutrality_party_long:0 "Ниппон Кошицу"
  JAP_national_unity_government:0 "Кекоку Иччи Найкаку"
  JAP_communism_party:0 "Ниппон Шакаи-то"
  JAP_communism_party_banned:0 "Ниппон Шакаи-то (Запрещена)"
- JAP_general_headquarters:0 "Дайхоней"
+ JAP_general_headquarters:0 "Дайхонъэй"
  JAP_black_dragon_society:0 "Кокурюкай"
 
  USA_communism_party:0 "Социалистическая Партия"
