Hollweg Removed, New Advisor, and Focus: Bolster Rationing

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -1348,6 +1348,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_henning_von_holtzendorff:0 "Henning von Holtzendorff"
  GER_friedrich_ebert:0 "Friedrich Ebert"
  GER_theobald_von_bethmannhollweg:0 "Theobald von Bethmann-Hollweg"
+ GER_georg_michaelis:0 "Georg Michaelis"
  GER_karl_liebknecht:0 "Karl Liebknecht"
  GER_paul_von_lettowvorbeck:0 "Paul von Lettow-Vorbeck"
  GER_alfred_von_schlieffen:0 "Alfred von Schlieffen"
