--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -54,6 +54,8 @@ GER_1907_federal_budget:0 "The 1907 Federal Budget"
 GER_1907_federal_budget_desc:0 ""
 GER_lost_momentum:0 "Lost Momentum"
 GER_lost_momentum_desc:0 ""
+GER_idea_extreme_rationing:0 "Extreme Rationing"
+GER_idea_extreme_rationing_desc:0 ""
 
 #Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
@@ -429,7 +431,7 @@ GER_operationsabteilung:0 "Operationsabteilung"
 GER_politische_abteilung:0 "Politische Abteilung"
 GER_advance_germania:0 "Advance Germania"
 GER_the_front_stalls:0 "The Front Stalls"
-GER_introduce_rationing_measures:0 "Introduce Rationing Measures"
+GER_introduce_rationing_measures:0 "Bolster Rationing Measures"
 GER_financing_the_war_economy:0 "Financing the War Economy"
 GER_collaborating_with_trade_unions:0 "Collaborating with Trade Unions"
 GER_revived_anti_socialist_laws:0 "Revive Anti-Socialist Laws"
