lebanon famine getting rework

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5972,6 +5972,8 @@
  TRS_subjugate_the_maronite_patriarch_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£defence_texticon  Division Defense: §G+5.0%§!\n\n"
  TRS_exile_unruly_bishops:0 "Exile Unruly Bishops"
  TRS_exile_unruly_bishops_desc:0 "Many Maronite and Greek Orthodox Christians in Syria have laid their loyalties on the side of the European nations rather than our empire. As they comprise a danger for collaboration with future enemy invasions, we have to exile those bishops who're not loyal to the empire."
+ TRS_introduce_paper_money:0 "Introduce Paper Money"
+ TRS_introduce_paper_money_desc:0 "[TUR.GetAdjective] paper money represents the Ottoman authority and hegemony in the region. Usage of the paper money proves the loyalty of the citizens to the empire. We shall force our citizens to use paper money."
  TRS_fund_regional_churches:0 "Fund Regional Churches"
  TRS_fund_regional_churches_desc:0 "Maronite, Orthodox and even Apostolic Churches continue to lack in funding. Giving them donations to run their churches could improve the opinion of our Christian citizens in the region."
  TRS_fund_regional_churches_tt1:0 "£ww1_flag_ARB  §YArab Minority§!:\nModifies §Y[TUR_the_sublime_realm_name]§! by\n£stability_texticon  Stability: §G+0.60%§!\n£war_support_modifiericons_texticon  War Support: §G+0.60%§!\n\n"
