--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4507,9 +4507,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.47.d:0 "Our recent war decision with France and Britain have had some unintended consequences. Being naval powers, our enemies have started a blockade against our nation. Unless anything is done against this blockade, it'll slowly starve our nation."
  ottoman.47.a:0 "Pray that you're not starving- oh..."
  ottoman.48.t:0 "The Great Famine of Mount Lebanon"
- ottoman.48.d:0 "A Great Famine in Mount Lebanon has started. Unless we reach a helping hand, near half of the population will surely die. But helping the people will require many precious resources which we're using for modernization. What shall we do?"
- ottoman.48.a:0 "They need our help"
- ottoman.48.b:0 "Only Allah can help them"
+ ottoman.48.d:0 "War time years are indeed no exception to scarcity of resources. While this has been the case for all across our empire, not only Mount Lebanon but whole of Syria is struct with an exceptional case. A a swarm of locusts devoured the crops in Syria, resulting in vast food shortages. As an unsuccessful harvest season combined with the war time conditions, it resulted in an all out famine.\nWhile the famine is a devastating event, it's nothing the glorious Ottoman state can't deal with. Yet other factors, both domestic and external, could very well lead to the situation spiral out of control."
+ ottoman.48.a:0 "We should deal with it as soon as possible."
  ottoman.49.t:0 "Aegean Crisis"
  ottoman.49.d:0 "As war is brewing in Europe, the effects of it is hitting our shores. Being involved with the war, the [TUR.GetAdjective] government has issued am ultimatium. Seeing the Greek control of the Greek islands as a security threat, the Ottomans have demanded the transfer of islands on their shores."
  ottoman.49.a:0 "We wont surrender our people to [TUR.GetAdjective] subjugation."
