--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -697,6 +697,7 @@
  TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
  TUR_autonomous_vilayet_lebanon:0 "Autonomous Mutasarrifate"
  TUR_autonomous_vilayet_lebanon_desc:0 "Special administrative of Mount Lebanon Mutasarrifate provides them with tax collection and conscription exceptions while preventing our troops from entering the region."
+ TUR_autonomous_vilayet_lebanon_tt:0 "§RThe state is set to be a Demilitarized Zone§!"
  TUR_autonomous_vilayet:0 "Autonomous Vilayet"
  TUR_autonomous_vilayet_desc:0 "Autonomous vilayets restrict our access to the states factories and resources yet provides us with increased local compliance and stability."
  TUR_semi_autonomous_vilayet:0 "Semi-Autonomous Vilayet"
@@ -881,12 +882,12 @@
  TUR_crippling_illiteracy_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
  TUR_crippling_illiteracy_dm:0 "£pol_idea  Crippling Illiteracy"
  TUR_crippling_illiteracy_dm_desc:0 "Our empire is mostly rural and a large part of the society has no access to education. Even those who has, due to religious indoctrination western science is viewed as heresy. Because of our insanely high illiteracy rates, we have difficulties with research and produce modern technology."
- TUR_crippling_illiteracy_tt:0 "[TRS_crippling_illiteracy_political_power_cost][TRS_crippling_illiteracy_monthly_population][TRS_crippling_illiteracy_conscription_factor][TRS_crippling_illiteracy_research_speed_factor][TRS_crippling_illiteracy_industrial_capacity_factory]"
- TRS_crippling_illiteracy_political_power_cost_yes:0 "£political_power_cost_texticon  Daily Political Power Cost: [?TUR_ci_political_power_cost|-=%%]\n"
- TRS_crippling_illiteracy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR_ci_monthly_population|1+=%]\n"
- TRS_crippling_illiteracy_conscription_factor_yes:0 "£manpower_texticon  Recruitable Population Factor: [?TUR_ci_conscription_factor|0+%]\n"
- TRS_crippling_illiteracy_research_speed_factor_yes:0 "£research_speed_texticon  Research Speed: [?TUR_ci_research_speed_factor|=+%]\n"
- TRS_crippling_illiteracy_industrial_capacity_factory_yes:0 "£factory_output_texticon  Factory Output: [?TUR_ci_industrial_capacity_factory|=+%]\n"
+ TUR_crippling_illiteracy_tt:0 "[TUR_crippling_illiteracy_political_power_cost][TUR_crippling_illiteracy_monthly_population][TUR_crippling_illiteracy_conscription_factor][TUR_crippling_illiteracy_research_speed_factor][TUR_crippling_illiteracy_industrial_capacity_factory]"
+ TUR_crippling_illiteracy_political_power_cost_yes:0 "£political_power_cost_texticon  Daily Political Power Cost: [?TUR_ci_political_power_cost|-=%%]\n"
+ TUR_crippling_illiteracy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR_ci_monthly_population|1+=%]\n"
+ TUR_crippling_illiteracy_conscription_factor_yes:0 "£manpower_texticon  Recruitable Population Factor: [?TUR_ci_conscription_factor|0+%]\n"
+ TUR_crippling_illiteracy_research_speed_factor_yes:0 "£research_speed_texticon  Research Speed: [?TUR_ci_research_speed_factor|=+%]\n"
+ TUR_crippling_illiteracy_industrial_capacity_factory_yes:0 "£factory_output_texticon  Factory Output: [?TUR_ci_industrial_capacity_factory|=+%]\n"
  TUR_guaranteed_freedom_of_speech:0 "Guaranteed Freedom of Speech"
  TUR_guaranteed_human_right:0 "Guaranteed Human Rights"
  TUR_limited_speech:0 "Restricted Personal Rigths and Freedoms"
@@ -1124,7 +1125,15 @@
  TUR_recently_integrated_economy_desc:0 "Recently integrated economy in the region gives us useful benefits, though their benefits are not ever lasting."
  BUL_administrative_autonomy:0 "Administrative Autonomy"
  BUL_administrative_autonomy_desc:0 "This state has its own governing body, effectively making it autonomous in many matters."
- BUL_administrative_autonomy_tt:0 "§RThe state is set to be a Demilitarized Zone§!"
+ TUR_great_famine_of_syria:0 "Great Famine of Syria"
+ TUR_great_famine_of_syria_desc:0 "War time scarcity combined with the drought of 1915 caused by the swarms of locusts has resulted in a famine that's threatening the survival of the Syrian people more than anything. Unless it's solved quickly, the famine will claim more lives"
+ TUR_great_famine_of_syria_tt:0 "[TUR_great_famine_of_syria_stability_factor][TUR_great_famine_of_syria_supply_consumption_factor][TUR_great_famine_of_syria_stability_weekly_factor][TUR_great_famine_of_syria_war_support_weekly_factor]"
+ TUR_great_famine_of_syria_stability_factor_yes:0 "£stability_texticon  Stability: [?TUR_gfs_stability_factor|=2%+]\n"
+ TUR_great_famine_of_syria_supply_consumption_factor_yes:0 "£supply_consumption_texticon  Supply Consumption: [?TUR_gfs_supply_consumption_factor|1+=%]\n"
+ TUR_great_famine_of_syria_stability_weekly_factor_yes:0 "£stability_texticon  Weekly Stability Gain: [?TUR_gfs_stability_weekly_factor|=2%+]\n"
+ TUR_great_famine_of_syria_war_support_weekly_factor_yes:0 "£war_support_modifiericons_texticon  Weekly War Support Gain: [?TUR_gfs_war_support_weekly_factor|=2%+]\n"
+ TUR_great_famine_of_syria_dm:0 "£pol_idea  Great Famine of Syria"
+ TUR_great_famine_of_syria_dm_desc:0 "War time scarcity combined with the drought of 1915 caused by the swarms of locusts has resulted in a famine that's threatening the survival of the Syrian people more than anything. Unless it's solved quickly, the famine will claim more lives"
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
